--- a/category-food-fruits.html
+++ b/category-food-fruits.html
@@ -10,9 +10,9 @@
      <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
   <span style="display:flex; align-items:center;">
     <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
-    <span style="margin-left:550px;">Stefan li Rous Memorial Florilegium</span>
+    <span style="margin-left:450px;">Stefan li Rous Memorial Florilegium</span>
   </span>
-      <button id="modeToggle" style="float: right; margin-left: 600px;">
+      <button id="modeToggle" style="float: right; margin-left: 300px;">
         🌙
       </button>
     </header>
@@ -101,7 +101,15 @@
       // Set category for this page
       window.currentCategory = "Fruit";
     </script>
+     <!-- Back to Top Button -->
+<button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">↑ Top</button>
     <script src="js/script.js"></script>
+    
+    
+
+     <footer class="site-footer">
+  <p>© <span id="year"></span> Rencraft 2025</p>
+</footer>
   </body>
 </html>
 
