Added a new category: Indigenous North America

--- a/about-stefan.html
+++ b/about-stefan.html
@@ -23,7 +23,7 @@
 <p><a href="index.html" style="text-decoration:none; color:#3a2a1a;">🏠 Home</a></p>
 <p><a href="#">About THL Stefan li Rous</a></p>
     <div id="categoryList">
-        <p><a href="category-12th-century.html">12th Century</a></p>
+         <p><a href="#">12th Century</a></p>
         <p><a href="category-accessories.html">Accessories</a></p>
             <p><a href="category-animals.html">Animals</a></p>
             <p><a href="category-archery.html">Archery</a></p>
@@ -61,6 +61,7 @@
                                            <p><a href="category-heraldry.html">Heraldry</a></p>
                                             <p><a href="category-home-sweet-home.html">Home Sweet Home</a></p>
                                              <p><a href="category-humor.html">Humor</a></p>
+                                             <p><a href="category-indigenous-north-america.html">Indigenous North America</a></p>
                                               <p><a href="category-medieval-events.html">Medieval Events</a></p>
                                                <p><a href="category-medieval-life.html">Medieval Life</a></p>
                                                  <p><a href="category-medieval-technology.html">Medieval Technology</a></p>
