--- a/category-medieval-life.html
+++ b/category-medieval-life.html
@@ -61,6 +61,7 @@
                                            <p><a href="category-heraldry.html">Heraldry</a></p>
                                             <p><a href="category-home-sweet-home.html">Home Sweet Home</a></p>
                                              <p><a href="category-humor.html">Humor</a></p>
+                                             <p><a href="category-indigenous-north-america.html">Indigenous North America</a></p>
                                               <p><a href="category-medieval-events.html">Medieval Events</a></p>
                                                <p><a href="#">Medieval Life</a></p>
                                                  <p><a href="category-medieval-technology.html">Medieval Technology</a></p>
