Trying to get accessories to work

--- a/category-accessories.html
+++ b/category-accessories.html
@@ -107,7 +107,7 @@
 </footer>
     <script>
       // Set category for this page
-      window.currentCategory = "Accessories";
+      window.currentCategory = "Accessory";
     </script>
  <script>
   // Show button when scrolled down
