--- a/category-bardic.html
+++ b/category-bardic.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Time</title>
+    <title>Armor</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-   <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
+         <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
   <span style="display:flex; align-items:center;">
     <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
     <span style="margin-left:450px;">Stefan li Rous Memorial Florilegium</span>
   </span>
-      <button id="modeToggle" style="float: right; margin-left: 300px;">
+      <button id="modeToggle" style="float: right; margin-left: 400px;">
         🌙
       </button>
     </header>
- <div style="display: flex">
+  <div style="display: flex">
      <div id="sidebar" style="width:200px; padding:10px;">
     <input type="text" placeholder="Search..." id="sidebarSearch"><br>
     <div id="categoryList">
@@ -44,6 +44,7 @@
     </script>
     </div>
 </div>
+
  <!-- Main Content -->
         <main class="col-md-10" id="contentArea">
           <!-- Cards populated dynamically by script.js -->
@@ -52,12 +53,12 @@
     </div>
     <script>
       // Set category for this page
-      window.currentCategory = "Time";
+      window.currentCategory = "Bardic";
     </script>
      <!-- Back to Top Button -->
 <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">↑ Top</button>
     <script src="js/script.js"></script>
-    <script>
+      <script>
   // Show button when scrolled down
   window.onscroll = function() {scrollFunction()};
 
