--- a/about-stefan.html
+++ b/about-stefan.html
@@ -7,12 +7,12 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-       <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
+           <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
   <span style="display:flex; align-items:center;">
     <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
-    <span style="margin-left:450px;">Stefan li Rous Memorial Florilegium</span>
+    <span style="margin-left:600px;">SLR Memorial Florilegium</span>
   </span>
-      <button id="modeToggle" style="float: right; margin-left: 400px;">
+      <button id="modeToggle" style="float: right; margin-left: 475px;">
         🌙
       </button>
     </header>
