--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
   <span style="display:flex; align-items:center;">
     <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
-    <span style="margin-left:450px;">Stefan li Rous Memorial Florilegium</span>
+    <span style="margin-left:550px;">SLR Memorial Florilegium</span>
   </span>
-      <button id="modeToggle" style="float: right; margin-left: 300px;">
+      <button id="modeToggle" style="float: right; margin-left: 450px;">
         🌙
       </button>
     </header>
