--- a/category-entertainment.html
+++ b/category-entertainment.html
@@ -7,15 +7,8 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-      <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
-  <span style="display:flex; align-items:center;">
-    <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
-    <span style="margin-left:450px;">Stefan li Rous Memorial Florilegium</span>
-  </span>
-      <button id="modeToggle" style="float: right; margin-left: 400px;">
-        🌙
-      </button>
-    </header>
+<!-- Placeholder for injected header -->
+  <div id="header-container"></div>
  <div style="display: flex">
      <div id="sidebar" style="width:200px; padding:10px;">
     <input type="text" placeholder="Search..." id="sidebarSearch"><br>
@@ -54,6 +47,8 @@
       // Set category for this page
       window.currentCategory = "Entertainment";
     </script>
+     <!-- Inject header + handle dark mode -->
+  <script src="data/header.js"></script>
      <!-- Back to Top Button -->
 <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">↑ Top</button>
     <script src="js/script.js"></script>
@@ -75,9 +70,8 @@
     window.scrollTo({ top: 0, behavior: "smooth" });
   }
 </script>
-     <footer class="site-footer">
-  <p>© <span id="year"></span> Rencraft 2025</p>
-</footer>
+    <div id="footer-container"></div>
+<script src="data/footer.js"></script>
   </body>
 </html>
 
