--- a/about-stefan.html
+++ b/about-stefan.html
@@ -3,24 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Stefan li Rous Memorial Florilegium</title>
+    <title>Memorial Florilegium</title>
+    <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+  crossorigin="anonymous"
+/>
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-           <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
-  <span style="display:flex; align-items:center;">
-    <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
-    <span style="margin-left:600px;">SLR Memorial Florilegium</span>
-  </span>
-      <button id="modeToggle" style="float: right; margin-left: 475px;">
-        🌙
-      </button>
-    </header>
+<div id="header-container"></div>
  <div style="display: flex">
      <div id="sidebar" style="width:200px; padding:10px;">
     <input type="text" placeholder="Search..." id="sidebarSearch"><br>
     <div id="categoryList">
-       <script>
+           <script>
         function loadCategories() {
             fetch('updated-menu.html')
                 .then(response => response.text())
@@ -72,10 +70,8 @@ Mark was fairly adventurous about food, although he couldn’t remember a green 
 
     <!-- Back to Top Button -->
 <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">↑ Top</button>
-<footer class="site-footer">
-  <p>© <span id="year"></span> Rencraft 2025</p>
-</footer>
   </body>
+  <script src="data/header.js"></script>
    <script>
   // Show button when scrolled down
   window.onscroll = function() {scrollFunction()};
@@ -109,5 +105,7 @@ Mark was fairly adventurous about food, although he couldn’t remember a green 
     modeToggle.textContent = '☀️';
   }
 </script>
+<div id="footer-container"></div>
+<script src="data/footer.js"></script>
 
 </html>
