--- a/category-accessories.html
+++ b/category-accessories.html
@@ -7,28 +7,8 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <header
-      style="
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        padding: 10px;
-      "
-    >
-      <span style="display: flex; align-items: center">
-        <img
-          src="img/Trillium_flower.svg.png"
-          alt="Icon"
-          style="width: 50px; height: 50px"
-        />
-        <span style="margin-left: 450px"
-          >Stefan li Rous Memorial Florilegium</span
-        >
-      </span>
-      <button id="modeToggle" style="float: right; margin-left: 400px">
-        🌙
-      </button>
-    </header>
+   <!-- Placeholder for injected header -->
+  <div id="header-container"></div>
  <div style="display: flex">
      <div id="sidebar" style="width:200px; padding:10px;">
     <input type="text" placeholder="Search..." id="sidebarSearch"><br>
@@ -63,18 +43,18 @@
         </main>
       </div>
     </div>
+     <!-- Inject header + handle dark mode -->
+  <script src="data/header.js"></script>
     <!-- Back to Top Button -->
     <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">
       ↑ Top
     </button>
 
-    <footer class="site-footer">
-      <p>© <span id="year"></span> Rencraft 2025</p>
-    </footer>
     <script>
       // Set category for this page
       window.currentCategory = "Accessory";
     </script>
+
     <script>
       // Show button when scrolled down
       window.onscroll = function () {
@@ -98,7 +78,8 @@
         window.scrollTo({ top: 0, behavior: "smooth" });
       }
     </script>
-
+<div id="footer-container"></div>
+<script src="data/footer.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
