--- a/category-indigenous-north-america.html
+++ b/category-indigenous-north-america.html
@@ -3,19 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>12th Century</title>
+    <title>Indigenous North America</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-      <header style="display:flex; align-items:center; justify-content:flex-start; padding:10px;">
-  <span style="display:flex; align-items:center;">
-    <img src="img/Trillium_flower.svg.png" alt="Icon" style="width:50px; height:50px;">
-    <span style="margin-left:450px;">Stefan li Rous Memorial Florilegium</span>
-  </span>
-      <button id="modeToggle" style="float: right; margin-left: 400px;">
-        🌙
-      </button>
-    </header>
+<!-- Placeholder for injected header -->
+  <div id="header-container"></div>
  <div style="display: flex">
      <div id="sidebar" style="width:200px; padding:10px;">
     <input type="text" placeholder="Search..." id="sidebarSearch"><br>
@@ -51,17 +44,17 @@
         </main>
       </div>
     </div>
-    <!-- Back to Top Button -->
-<button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">↑ Top</button>
-
- <footer class="site-footer">
-  <p>© <span id="year"></span> Rencraft 2025</p>
-</footer>
-    <script>
+    
+   <script>
       // Set category for this page
       window.currentCategory = "FN Indigenous";
     </script>
- <script>
+ <!-- Inject header + handle dark mode -->
+  <script src="data/header.js"></script>
+     <!-- Back to Top Button -->
+<button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">↑ Top</button>
+    <script src="js/script.js"></script>
+    <script>
   // Show button when scrolled down
   window.onscroll = function() {scrollFunction()};
 
@@ -79,8 +72,8 @@
     window.scrollTo({ top: 0, behavior: "smooth" });
   }
 </script>
-
-    <script src="js/script.js"></script>
-
+<script src="js/script.js"></script>
+   <div id="footer-container"></div>
+<script src="data/footer.js"></script>
   </body>
 </html>
