--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,3 @@
 <footer class="site-footer">
-  <p>© <span id="year"></span> Rencraft 2025</p>
+  <p>© <span id="year"></span> Rencraft</p>
 </footer>
-
-<script>
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
